--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -225,7 +225,7 @@ then shifted so that the channel can be simulated as a single instance
 of the Guide component. Finally the coordinates are restored when the
 neutron exits the guide or is absorbed.
 
-\subsection{Known problems}
+\subsection{Known problems}\index{Bugs}
 This component may produce wrong results with gravitation support. Use Guide\_gravity (section \ref{s:guide_gravity}) in this case.
 Additionally, the focusing channeled geometry (for $k > 1$ and different
 values of $w_1$ and $w_2$) is buggy
