--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -311,7 +311,7 @@
 
 
 @book{mcstasmanual,
-   author    = {Peter Willendrup and Emmanuel Farhi and Kim Lefmann and and Klaus Lieutenant},
+   author    = {Peter Willendrup and Emmanuel Farhi and Kim Lefmann and Klaus Lieutenant},
    title     = {User and Programmers Guide to the Neutron Ray-Tracing Package McStas, Version 1.9},
    year      = {2005},
    publisher = {Risoe Report}
@@ -370,4 +370,12 @@
    title     = {ILL Neutron Data Booklet},
    year      = {2003},
    publisher = {OCP Science}
+}
+
+@misc{icsd_ill,
+  note       = {ICSD, Inorganic Crystal Structure Database. See http://icsd.ill.fr}
+}
+
+@misc{Fullprof,
+  note       = {Fullprof powder refinement. See http://www-llb.cea.fr/fullweb/fp2k/fp2k.htm}
 }
