--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -48,7 +48,7 @@ In case of errors, questions, or suggestions,
 %or other need for support should arise,
 do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
-or consult the \MCS\ home page~\cite{mcstas_webpage}.
+or consult the \MCS\ home page~\cite{mcstas_webpage}. A special bug/request reporting service is available \cite{mczilla_webpage}.
 
 Important developments on the component side in \MCS\ version \version\
 as compared to version 1.4 (the last version of the component manual;
@@ -79,7 +79,7 @@ and benchmarking in simple cases}
   \item \verb+PowderN+. N lines powder diffraction (P.K. Willendrup, Ris\o)
   \item \verb+Sans_spheres+ hard spheres in thin solution, mono disperse (L. Arleth, the Royal Veterinary and Agricultural University (DK), K. Lefmann, Ris\o )
   \item \verb+Isotropic_Sqw+ isotropic inelastic sample (powder, liquid, glass)
-elastic/inelastic scattering from $S(q,\omega)$ data (E. Farhi, V. Hugovieux, ILL)
+elastic/inelastic scattering from $S(q,\omega)$ data (E. Farhi, V. Hugouvieux, ILL)
   \item \verb+SANS_*+ A collection of samples for SANS (H. Frielinghaus,  FZ-J\"ulich)
   \end{itemize}
 \end{itemize}
