--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -813,7 +813,7 @@ fusion of the computations. For instance, spreading a computation
 implies either an \verb'rsh' or and \verb'ssh' session to be opened on
 every node.
 
-\subsection{McStas/MPI Bugs and limitations}
+\subsection{McStas/MPI Bugs and limitations}\index{Bugs}
 
 \begin{itemize}
 \item when simulating $N$ neutrons with $p$ machines, the effective
