--- a/trunk/monochromator_curved.tex
+++ b/trunk/monochromator_curved.tex
@@ -27,18 +27,19 @@ The scattering vector is named $Q$, and as described in
 Other important parameters are the piece height and width,
 $y_{\rm h}$ and $z_{\rm w}$, respectively, the
 horizontal and vertical mosaicities, $\eta_{\rm h}$ and $\eta_{\rm v}$,
-respectively. 
+respectively.
 If just one mosaicity, $\eta$, is specified, this the same for both directions.
 
 The number of pieces vertically and horizontally are called
 $n_{\rm v}$ and $n_{\rm h}$, respectively, and the vertical and horizontal
 radii of curvature are named $r_{\rm v}$ and $r_{\rm h}$, respectively.
-All single crystals are positioned in the same vertical plane, 
+All single crystals are positioned in the same vertical plane,
 but tilted accordingly to the curvature radius.
 
 The constant monochromator reflectivity, $R_0$ can be replaced by
-a file of tabulated reflectivities. In the same sense, the transmission
-can be modeled by a tabulated file (for non-reflected neutrons).
+a file of tabulated reflectivities $reflect$ (\verb+*.rfl+ in \verb+MCSTAS/data+). In the same sense, the transmission
+can be modeled by a tabulated file $transmit$ (for non-reflected neutrons, \verb+*.trm+ in \verb+MCSTAS/data+).
+The most useful of these files for Monochromator\_curved are \verb+HOPG.rlf+ and \verb+HOPG.trm+.
 
 As for {\bf Monochromator\_flat}, the crystal is assumed to be infinitely
 thin, and the varition in lattice spacing, ($\Delta d/d$),
