--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -19,38 +19,38 @@ But achieving a satisfactory experiment on the best neutron spectrometer is not 
 
 \section{Neutron spectrometer simulations}
 
-Neutron scattering instruments are built as a series of neutron optics elements. 
-Each of these elements modifies the beam characteristics 
-(e.g. divergence, wavelength spread, spatial and time distributions) 
-in a way which may be modeled through analytical methods, 
+Neutron scattering instruments are built as a series of neutron optics elements.
+Each of these elements modifies the beam characteristics
+(e.g. divergence, wavelength spread, spatial and time distributions)
+in a way which may be modeled through analytical methods,
 for simplified neutron beam configurations.
-This stands for individual elements such as guides \cite{Leibnitz63,Mildner90}, 
-choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05}, 
-velocity selectors \cite{Clark66}, 
-monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04}, 
+This stands for individual elements such as guides \cite{Leibnitz63,Mildner90},
+choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05},
+velocity selectors \cite{Clark66},
+monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04},
 and detectors \cite{Radeka74,Charpak89,Manzin04}.
-In the case of selected neutron instrument parts, one may use efficiently 
-the so-called acceptance diagram theory \cite{Mildner90,Copley93,Cussen03} 
-within which the neutron beam distributions are considered to be homogeneous 
+In the case of selected neutron instrument parts, one may use efficiently
+the so-called acceptance diagram theory \cite{Mildner90,Copley93,Cussen03}
+within which the neutron beam distributions are considered to be homogeneous
 or gaussian.
-However, the concatenation of a high number of neutron optical elements, 
-which indeed constitute real instruments, brings additional complexity 
-by introducing strong correlations between neutron beam parameters: 
-divergence and position - which is the basis of the acceptance diagram method - 
-but also wavelength and time. 
-The usual analytical methods (phase-space theory...) then reach their limit 
+However, the concatenation of a high number of neutron optical elements,
+which indeed constitute real instruments, brings additional complexity
+by introducing strong correlations between neutron beam parameters:
+divergence and position - which is the basis of the acceptance diagram method -
+but also wavelength and time.
+The usual analytical methods (phase-space theory...) then reach their limit
 of validity in the description of the resulting fine effects.
 
-In principle, computing individual neutron event propagation 
-at each instrument part, using analytical and numerical models, 
-is not such a hard task. 
-The use of probablilities is common to describe microscopic physical processes. 
-Integrating all these events over the propagation path will result 
-in an estimation of measurable quantities characterizing the neutron instrument. 
-Moreover, using variance reduction ({\it e.g.} importance sampling), 
-whenever possible, will both speed-up the computation and achieve 
-a better accuracy. What we just sketched is nothing else than the basis 
-of the Monte-Carlo (MC) method \cite{James80}, 
+In principle, computing individual neutron event propagation
+at each instrument part, using analytical and numerical models,
+is not such a hard task.
+The use of probablilities is common to describe microscopic physical processes.
+Integrating all these events over the propagation path will result
+in an estimation of measurable quantities characterizing the neutron instrument.
+Moreover, using variance reduction ({\it e.g.} importance sampling),
+whenever possible, will both speed-up the computation and achieve
+a better accuracy. What we just sketched is nothing else than the basis
+of the Monte-Carlo (MC) method \cite{James80},
 applied to neutron ray-tracing instrumentation.
 
 \subsection{Monte Carlo ray tracing simulations}
@@ -66,16 +66,16 @@ Although early implementations of the method for neutron instruments used \emph{
 These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcstas_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
 Their usage usually covers all types of neutron spectrometers, most of the time through a user-friendly graphical interface, without requiring programming skills.
 
-The neutron ray-tracing Monte-Carlo method has been used widely for 
-{\em e.g.}\ guide studies \cite{Copley93,Farhi02,Schanzer04}, 
-instrument optimization and design \cite{Zsigmond04,Lieutenant05}. 
-Most of the time, the conclusions and general behaviour of such studies 
-may be obtained using the classical analytical approaches, 
-but accurate estimates for the flux, the resolutions, 
+The neutron ray-tracing Monte-Carlo method has been used widely for
+{\em e.g.}\ guide studies \cite{Copley93,Farhi02,Schanzer04},
+instrument optimization and design \cite{Zsigmond04,Lieutenant05}.
+Most of the time, the conclusions and general behaviour of such studies
+may be obtained using the classical analytical approaches,
+but accurate estimates for the flux, the resolutions,
 and generally the optimum parameter set, benefit advantageously from MC methods.
 
 Recently, the concept of virtual experiments, {\em i.e.}\ full simulations
-of a complete neutron experiment, has been suggested as the main 
+of a complete neutron experiment, has been suggested as the main
 goal for neutron ray-tracing simulations \cite{lefmann05}. The goal is that
 simulations should be of benefit to not only instrument builders, but also
 to users for training, experiment planning, diagnostics, and data analysis.
@@ -102,13 +102,13 @@ would require in average ten incoming neutrons for each reflected one.
 
 Let the initial neutron weight be $p_0$ and let us denote the weight
 multiplication factor in the $j$'th component by $\pi_j$.  The resulting
-weight factor for the neutron ray after passage of the whole instrument 
+weight factor for the neutron ray after passage of the whole instrument
 becomes the product of all contributions
 \begin{equation}
 \label{e:probprod}
 p = p_n = p_0 \prod_{j=1}^n \pi_j .
 \end{equation}
-For convenience, the value of $p$ is updated (within each component) 
+For convenience, the value of $p$ is updated (within each component)
 during the simulation.
 
 Simulation by weight adjustment is performed
@@ -129,14 +129,14 @@ whenever possible. This includes
 
 In a typical simulation, the result will consist of a
 count of neutrons histories ("rays") with different weights. The
-sum of these weights is an estimate of the mean number of neutrons 
+sum of these weights is an estimate of the mean number of neutrons
 hitting the monitor (or detector) per second in a ``real'' experiment.
 One may write the counting result as
 \begin{equation}
 \label{psum}
 I = \sum_i p_i = N \overline{p} ,
 \end{equation}
-where $N$ is the number of neutrons in the detector and the vertical bar 
+where $N$ is the number of neutrons in the detector and the vertical bar
 denote averaging.
 By performing the weight transformations, the (statistical)
 mean value of $I$ is unchanged. However, $N$ will in general be enhanced,
@@ -163,11 +163,11 @@ assuming that the two variables are independent:
 \begin{equation}
 \sigma^2(I) = \sigma^2(N) \overline{p}^2 + N^2 \sigma^2(\overline{p}) .
 \end{equation}
-Assuming that $N$ follows a normal distribution, we reach 
+Assuming that $N$ follows a normal distribution, we reach
 $\sigma^2(N) \overline{p}^2 = N \overline{p}^2$.
-Further, assuming that the individual weights, $p_i$, 
+Further, assuming that the individual weights, $p_i$,
 follow a Gaussian distribution (which in many cases is far from the truth)
-we have 
+we have
 $N^2 \sigma^2(\overline{p}) = \sigma^2(\sum_i p_i) = N \sigma^2(p_i)$
 and reach
 \begin{equation}
@@ -224,7 +224,7 @@ f_{\rm MC} \pi_j = P .
 %only the $(\Ombold, {\bf r})$ dependence of the correction factors
 %are taken into account.
 
-This probability rule is general, and holds also if, e.g., it is decided to 
+This probability rule is general, and holds also if, e.g., it is decided to
 transmit only half of the rays $(f_{\rm MC}=0.5)$.
 An important different example
 is elastic scattering from a powder sample,
@@ -254,7 +254,7 @@ to be changed by the amount
 $\pi_j = |\Delta \Ombold| / (4 \pi)$.
 One thus ensures that the mean simulated intensity is unchanged
 during a "correct" direction focusing, while a too narrow focusing will
-result in a lower (\textit{i.e.} wrong) intensity, since 
+result in a lower (\textit{i.e.} wrong) intensity, since
 we cut neutrons rays that should have counted.
 
 \section{Adaptive sampling}
@@ -262,7 +262,7 @@ Another strategy to improve sampling in simulations
 is adaptive importance sampling, % \cite{importance},
 where \MCS\ during the simulations will determine
 the most interesting directions and gradually change
-the focusing according to that. 
+the focusing according to that.
 Implementation of this idea is
-found in the {\bf Source\_adapt} and {\bf Source\_optimizer} components.
+found in the {\bf Source\_adapt} and {\bf Source\_Optimizer} components.
 %, described in section~\ref{s:Source_adapt}.
