--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -180,7 +180,7 @@ When doing diffraction, and neglecting inelastic contribution as first approxima
 & = & N\frac{(2\pi)^3}{V_0}\sum_{\boldsymbol{\tau}} \delta(\boldsymbol{\tau} - \boldsymbol{q})|F_{\boldsymbol{\tau}}|^2 {\rm\ from\ Eq.\ (\ref{eq:sigma_coh_el})}
 \end{eqnarray}
 with $V_0 = 1/\rho$ being the volume of a lattice unit cell. Then we may write the formal equivalence:
-\begin{eqnarray}
+\begin{eqnarray}\label{eq:sq-F2}
 S_{coh}(q) = \frac{2(2\pi)^4\rho}{\sigma_{coh}} \sum_{|\tau|} z(q) \delta(\tau - q) |F_\tau)|^2 {\rm\ in\ a\ powder.}
 \end{eqnarray}
 
@@ -224,6 +224,8 @@ In any case, the accuracy of the $S(q, \omega)$ data limits the $Q$ and $\omega$
 
 If the Sqw\_inc parameter is left unset but the $\sigma_{inc}$ is \emph{not} zero, an isotropic incoherent elastic scattering is used, just like the V\_sample component (see section \ref{s:v_sample}).
 
+Anyway, as explained below, it is also possible to only simulate the elastic scattering from a powder file (see below). Moreover, as there are two process channels (coherent and incoherent), it is possible to simulate a mixture of two powders, with fractions proportional to $\sigma_{coh}$ and $\sigma_{inc}$.
+
 \subsubsection{Files formats: $S(q,\omega)$}
 
 The format of the data files is free text, consisting of three numerical block, separated by empty lines or comments, in the following order
@@ -250,7 +252,7 @@ This file format provides a mean to import directly an $S(q)$ data set, when set
 \begin{verbatim}
   powder_format=qSq
 \end{verbatim}
-The 'Sqw\_coh' file should contains a single numerical block, which column assignment is defaulted as $q$ and $S(q)$ being the first and second columns respectively. This may be overridden from the file header with '\#column' keywords, as in the example:
+The 'Sqw\_coh' (or 'Sqw\_inc') file should contains a single numerical block, which column assignment is defaulted as $q$ and $S(q)$ being the first and second columns respectively. This may be overridden from the file header with '\#column' keywords, as in the example:
 \begin{verbatim}
   #column_q  2
   #column_Sq 1
@@ -270,7 +272,35 @@ The last two parameters may as well be specified in the data file header with li
   #Debye_Waller 1
   #Detla_d/d    1e-3
 \end{verbatim}
+The powder description is then translated into $S(q)$ by using Eq. (\ref{eq:sq-F2}).
+In this case, the density $\rho = 1/V_0$ is the inverse volume of the unit cell.
 
 \subsubsection{Concentric geometries, sample environment}
+\index{Sample environments}
 
-Central component may be of any type, not specifically an Isotropic\_sqw instance.
+The component has been designed in a way which enables to describe complex imbricated set-ups, i.e. what you need to simulate sample environments. To do so, one has first to use hollow shapes, they keep in mind that each surrounding geometry should be first declared before the central position (usially the sample) with the \verb+concentric=1+ parameter, but also duplicated (with an other instance name) at a symetric position with regards to the centre as in the example (shown in Fig. \ref{f:isotropic-sqw}):
+\begin{verbatim}
+COMPONENT s_in=Isotropic_Sqw(
+  thickness=0.001, radius_o=0.02, yheight=0.015, concentric=1,
+  V_rho=0.015, Sqw_coh="Aluminium.pow",
+  sigma_coh=1.45,sigma_abs=0.23, sigma_inc=8e-3)
+AT (0,0,1) RELATIVE a
+
+COMPONENT sample=Isotropic_Sqw(
+  xwidth=0.01, yheight=0.01, zthick=0.01,
+  V_rho=0.072, Sqw_coh="He4_coh.sqw", T=10,
+  sigma_abs=0.00747, sigma_inc=0, sigma_coh=1.34)
+AT (0,0,1) RELATIVE a
+
+COMPONENT s_out=Isotropic_Sqw(
+  thickness=0.001, radius_o=0.02, yheight=0.015,
+  V_rho=0.015, Sqw_coh="Aluminium.pow",
+  sigma_coh=1.45,sigma_abs=0.23, sigma_inc=8e-3)
+AT (0,0,1) RELATIVE a
+\end{verbatim}
+Central component may be of any type, not specifically an Isotropic\_sqw instance. It could be for instance a Single\_crystal.
+In principle, the number of surrounding shells is not restricted.
+The only restriction is that neutrons that scatter (in $4\pi$) can not come back in the instrument description, so that some of the multiple scattering events are lost. namely, in the previous example, neutrons scattered by the outer wall of the cryostat \verb+s_out+ can not come back to the sample or to the other cryostat wall \verb+s_in+. As these neutrons have usually few chances to reach the rest of the simulation, we expect that the approximation is fair.
+
+
+
