Updated Isotropic_sqw doc Wrote Fermi Chopper stuff, with figs New bender, Disk Chopper stuff Minor modifications elsewhere
git-svn-id: https://svn.mccode.org/svn/McStasTeX@99 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -3,6 +3,9 @@
 \index{Samples!Single crystal diffraction}
 \index{Diffraction}
 \index{Incoherent elastic scattering}
+\index{Multiple scattering}
+
+The Single\_crystal component models a thick, flat single crystal with multiple scattering and absorption with elastic coherent scattering. An elastic incoherent background may also be simulated. It may be used to describe samples for diffraction, but also for accurate monochromator descriptions.
 
 \subsection{The physical model}
 
