--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -37,8 +37,8 @@ We list in this chapter some of the optics components that may be used for TOF c
 \newpage
 \input{chopper}
 
-%\newpage
-%\input{chopper_fermi}
+\newpage
+\input{FermiChopper}
 
 \newpage
 \input{v_selector}
