--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -48,18 +48,18 @@ which may ease the task of writing component and instrument definitions.
 \index{Library!Run-time!PROP\_DT}
 \index{Library!Run-time!PROP\_GRAV\_DT}
 \index{Library!Run-time!ALLOW\_BACKPROP}
-Propagation routines perform all necessary operations to transport neutron rays 
-from one point to an other. Except when using the special 
-\verb+ALLOW_BACKPROP;+ call prior to exectuting any \verb+PROP_*+ propagation, 
-the neutron rays which have negative propagation times are removed automatically. 
+Propagation routines perform all necessary operations to transport neutron rays
+from one point to an other. Except when using the special
+\verb+ALLOW_BACKPROP;+ call prior to exectuting any \verb+PROP_*+ propagation,
+the neutron rays which have negative propagation times are removed automatically.
 \begin{itemize}
 \item {\bf ABSORB}. This macro issues an order to the overall
   \MCS\ simulator to interrupt the simulation of the current neutron
   history and to start a new one.
 \item {\bf PROP\_Z0}. Propagates the neutron to the $z=0$ plane,
-  by adjusting $(x,y,z)$ and $t$ accordingly. 
+  by adjusting $(x,y,z)$ and $t$ accordingly.
   If the propagation time is negative, the neutron ray is absorbed.
-  For components that are centered along the $z$-axis, 
+  For components that are centered along the $z$-axis,
   use the \verb+_intersect+ functions to determine intersection time(s),
   and then a \verb+PROP_DT+ call.
 \item {\bf PROP\_DT}$(dt)$. Propagates the neutron through the
@@ -67,18 +67,18 @@ the neutron rays which have negative propagation times are removed automatically
 \item {\bf PROP\_GRAV\_DT}$(dt,Ax,Ay,Az)$. Like {\bf PROP\_DT}, but it also
   includes gravity using the acceleration $(Ax,Ay,Az)$. In addition
   to adjusting $(x,y,z)$ and $t$, also $(vx,vy,vz)$ is modified.
-\item {\bf ALLOW\_BACKPROP}. Indicates that the next propagation routine 
-  will not remove the neutron ray, even if negative propagation times 
+\item {\bf ALLOW\_BACKPROP}. Indicates that the next propagation routine
+  will not remove the neutron ray, even if negative propagation times
   are found. Further propagations are not affected.\index{Removed neutron events}
 \item {\bf SCATTER}. This macro is used to denote a scattering event
   inside a component.
-%, see section~\ref{s:comp-trace}. 
+%, see section~\ref{s:comp-trace}.
   It should be used e.g
-  to indicate that a component has interacted with the neutron ray 
+  to indicate that a component has interacted with the neutron ray
   (e.g. scattered or detected).
   This does not affect the simulation at all, and is mainly used by the
-  \verb+MCDISPLAY+ section and the \verb+GROUP+ modifier 
-%(see~\ref{s:trace} and \ref{s:comp-mcdisplay}). 
+  \verb+MCDISPLAY+ section and the \verb+GROUP+ modifier
+%(see~\ref{s:trace} and \ref{s:comp-mcdisplay}).
   See also the SCATTERED variable (below).
   \index{Keyword!GROUP} \index{Keyword!MCDISPLAY} \index{Keyword!EXTEND}
 \end{itemize}
@@ -96,7 +96,7 @@ the neutron rays which have negative propagation times are removed automatically
 \begin{itemize}
 \item {\bf MC\_GETPAR}(). This may be used in the finally section of an
   instrument definition to reference the output parameters of a
-  component. 
+  component.
 % See page~\pageref{mcgetpar} for details.
 \item {\bf NAME\_CURRENT\_COMP} gives the name of the current component as a string.
 \item {\bf POS\_A\_CURRENT\_COMP} gives the absolute position of the
@@ -134,8 +134,8 @@ the neutron rays which have negative propagation times are removed automatically
   to make, for instance, your
   component access the position of the next component (this is usefull for
   automatic targeting).  A component of the vector is referred to as
-  POS\_A\_COMP\_INDEX$(index).i$ where $i$ is $x$, $y$ or $z$. 
-\item {\bf POS\_R\_COMP\_INDEX} works the same as above, 
+  POS\_A\_COMP\_INDEX$(index).i$ where $i$ is $x$, $y$ or $z$.
+\item {\bf POS\_R\_COMP\_INDEX} works the same as above,
   but with relative coordinates.
 \item {\bf STORE\_NEUTRON}$(index, x, y, z, vx, vy, vz, t$, $sx, sy,
 sz, p)$ stores the current neutron state in the trace-history table,
@@ -173,9 +173,9 @@ $z$ members of the Coord structure $P$ into $x,y,z$ variables.
 \item {\bf coords\_add}$(a,b)$, {\bf coords\_sub}$(a,b)$, {\bf
 coords\_neg}$(a)$ enable to  operate on coordinates, and return the
 resulting Coord structure.
-\item {\bf rot\_set\_rotation}({\it Rotation t}, $\phi_x, \phi_y, \phi_z$) 
-  Get transformation matrix for rotation 
-  first $\phi_x$ around x axis, then $\phi_y$ around y, 
+\item {\bf rot\_set\_rotation}({\it Rotation t}, $\phi_x, \phi_y, \phi_z$)
+  Get transformation matrix for rotation
+  first $\phi_x$ around x axis, then $\phi_y$ around y,
   and last $\phi_z$ around z. $t$ should be a 'Rotation' ([3][3] 'double' matrix).
 \item {\bf rot\_mul}{\it (Rotation t1, Rotation t2, Rotation t3)} performs $t3 = t1 . t2$.
 \item {\bf rot\_copy}{\it (Rotation dest, Rotation src)} performs $dest = src$ for Rotation arrays.
@@ -198,7 +198,7 @@ resulting Coord structure.
   Computes a unit vector $(n_x, n_y, n_z)$ normal to the vector
   $(x,y,z)$.
 \item {\bf solve\_2nd\_order}(*$t$, $A$,  $B$,  $C$).
-  Solves the 2$^{nd}$ order equation $At^2 + Bt = C = 0$ and returns 
+  Solves the 2$^{nd}$ order equation $At^2 + Bt = C = 0$ and returns
   the smallest positive solution into pointer *$t$.
 \end{itemize}
 
@@ -208,13 +208,13 @@ resulting Coord structure.
   single detector. The name of the detector is output together
   with the simulated intensity and estimated statistical error. The
   output is produced in a format that can be read by \MCS\ front-end
-  programs. 
+  programs.
 %See section~\ref{s:comp-finally} ??? for details.
 \item {\bf DETECTOR\_OUT\_1D}$(...)$. Used to output the results from a
-  one-dimentional detector. 
+  one-dimentional detector.
 %See section~\ref{s:comp-finally} for details.
 \item {\bf DETECTOR\_OUT\_2D}$(...)$. Used to output the results from a
-  two-dimentional detector. 
+  two-dimentional detector.
 %See section~\ref{s:comp-finally} for details.
 \item {\bf DETECTOR\_OUT\_3D}$(...)$. Used to output
   the results from a three-dimentional detector. Arguments are the same as
@@ -222,9 +222,9 @@ resulting Coord structure.
   Resulting data files are treated as 2D data, but the 3rd dimension is
   specified in the $type$ field.
 \item {\bf mcinfo\_simulation}{\it (FILE *f, mcformat,
-  char *pre, char *name)} is used to append the simulation parameters into file $f$ 
-  (see for instance the Res\_monitor component). 
-  Internal variable $mcformat$ should be used as specified. 
+  char *pre, char *name)} is used to append the simulation parameters into file $f$
+  (see for instance the Res\_monitor component).
+  Internal variable $mcformat$ should be used as specified.
   Please contact the authors for further information.
 \end{itemize}
 
@@ -278,10 +278,10 @@ resulting Coord structure.
 \section{Reading a data file into a vector/matrix (Table input, \texttt{read\_table-lib})}
 \label{s:read-table}
 \index{Library!read\_table-lib (Read\_Table)|textbf}
-  The \verb+read_table-lib+ provides functionalities for reading text 
-  (and binary) data files. To use this library, 
-  add a \verb+%include "read_table-lib"+ in your component definition 
-  DECLARE or SHARE section. Tables are structures of type $t_{\rm Table}$ 
+  The \verb+read_table-lib+ provides functionalities for reading text
+  (and binary) data files. To use this library,
+  add a \verb+%include "read_table-lib"+ in your component definition
+  DECLARE or SHARE section. Tables are structures of type $t_{\rm Table}$
   (see \verb+read_table-lib.h+ file for details):
 \begin{verbatim}
     /* t_Table structure (most important members) */
@@ -296,15 +296,15 @@ resulting Coord structure.
 
 Available functions to read \emph{a single} vector/matrix are:
 \begin{itemize}
-\item {\bf Table\_Init}(\&$Table$, $rows$, $columns$) returns an allocated 
-  Table structure. Use $rows=columns=0$ not to allocate memory. 
+\item {\bf Table\_Init}(\&$Table$, $rows$, $columns$) returns an allocated
+  Table structure. Use $rows=columns=0$ not to allocate memory.
   Calls to Table\_Init are optional, since initialization is being
   performed by other functions already.
 \item {\bf Table\_Read}(\&$Table$, $filename$, $block$) reads numerical block number $block$ (0 to catenate all) data from \emph{text} file $filename$ into $Table$, which is as well initialized in the process. The block number changes when the numerical data changes its size, or a comment is encoutered (lines starting by '\verb+# ; % /+'). If the data could not be read, then $Table.data$ is NULL and $Table.rows = 0$. You may then try to read it using Table\_Read\_Offset\_Binary. Return value is the number of read elements.
-\item {\bf Table\_Read\_Offset}(\&$Table$, $filename$, $block$, \&\textit{offset}, $n_{rows}$) 
-  does the same as Table\_Read except that it starts at offset \textit{offset} 
-  (0 means begining of file) and reads $n_{rows}$ lines (0 for all). 
-  The \textit{offset} is returned as the final offset reached after 
+\item {\bf Table\_Read\_Offset}(\&$Table$, $filename$, $block$, \&\textit{offset}, $n_{rows}$)
+  does the same as Table\_Read except that it starts at offset \textit{offset}
+  (0 means begining of file) and reads $n_{rows}$ lines (0 for all).
+  The \textit{offset} is returned as the final offset reached after
   reading the $n_{rows}$ lines.
 \item {\bf Table\_Read\_Offset\_Binary}(\&$Table$, $filename$, $type$,
   $block$, \&\textit{offset}, $n_{rows}$, $n_{columns}$) does the same as
@@ -323,9 +323,9 @@ Available functions to read \emph{a single} vector/matrix are:
 
 Available functions to read \emph{an array} of vectors/matrices in a \emph{text} file are:
 \begin{itemize}
-\item {\bf Table\_Read\_Array}($File$, \&$n$) read and split $file$ 
-into as many blocks as necessary and return a $t_{\rm Table}$ array. 
-Each block contains a single vector/matrix. This only works for text files. 
+\item {\bf Table\_Read\_Array}($File$, \&$n$) read and split $file$
+into as many blocks as necessary and return a $t_{\rm Table}$ array.
+Each block contains a single vector/matrix. This only works for text files.
 The number of blocks in put into $n$.
 \item {\bf Table\_Free\_Array}(\&$Table$) free the $Table$ array.
 \item {\bf Table\_Info\_Array}(\&$Table$) display information about all data blocks.
@@ -342,8 +342,8 @@ The format of text files is free. Lines starting by '\verb+# ; % /+' characters 
   1.1000  0.80680
   ...
 \end{verbatim}
-Binary files should be of type "float" (i.e. REAL*32) and "double" (i.e. REAL*64), 
-and should \emph{not} contain text header lines. These files are platform 
+Binary files should be of type "float" (i.e. REAL*32) and "double" (i.e. REAL*64),
+and should \emph{not} contain text header lines. These files are platform
 dependent (little or big endian).
 
 The $filename$ is first searched into the current directory (and all user additional locations specified using the \verb+-I+ option, see section~\ref{s:files}), and if not found, in the \verb+data+ sub-directory of the \verb+MCSTAS+ library location. \index{Library!Components!data}
@@ -401,10 +401,10 @@ Refer to these components for implementation examples, and ask the authors for m
 \section{Vitess import/export Library}
 \index{Library!vitess-lib}
 
-This library is used by the components 
-{\bf Vitess\_input} and {\bf Vitess\_output}, 
+This library is used by the components
+{\bf Vitess\_input} and {\bf Vitess\_output},
 as well as the \verb+mcstas2vitess+ utility.
-% (see section~\ref{s:mcstas2vitess}). 
+% (see section~\ref{s:mcstas2vitess}).
 \index{Tools!mcstas2vitess}
 Refer to these components for implementation examples, and ask the authors for more details.
 
@@ -440,6 +440,8 @@ Name & Value & Conversion from & Conversion to \\ \hline
   & Planck constant, $\hbar$ & \\
 \textvb{PI} & $3.14159265...$
   & $\pi$ & \\
+\textvb{FLT\_MAX} & 3.40282347E+38F
+  & a big float value & \\
 \hline
 \end{tabular}
 \end{center}
