--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -379,3 +379,17 @@
 @misc{Fullprof,
   note       = {Fullprof powder refinement. See http://www-llb.cea.fr/fullweb/fp2k/fp2k.htm}
 }
+
+@book{NumRecip,
+   author    = {W.H. Press and S.A. Teukolsky and W.T. Vetterling and B.P. Flannery},
+   title     = {Numerical Recipes (2nd Edition)},
+   year      = {2002},
+   publisher = {Cambridge University Press}
+}
+
+@article{blanc83,
+   author    = {Y. Blanc},
+   journal   = {ILL Report},
+   year      = {1983},
+   volume    = {83BL21G}
+}
